--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
               </tr>
               <tr>
                 <th scope="row">6</th>
-                <td>SEHOMI</td>
                 <td>Fridaos</td>
+                <td>SEHOMI</td>
+                <td>Web design</td>
                 <td>asehomi@gmail.com</td>
               </tr>
               <tr>
